--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -53,10 +53,20 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="Class2.cs" />
+    <Compile Include="CustomConvention\DateTypeConvention.cs" />
+    <Compile Include="CustomConvention\KeyConvention.cs" />
     <Compile Include="GpContext.cs" />
     <Compile Include="Migrations\202011060934513_initialCreate.cs" />
     <Compile Include="Migrations\202011060934513_initialCreate.designer.cs">
       <DependentUpon>202011060934513_initialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202011191917562_Adresse.cs" />
+    <Compile Include="Migrations\202011191917562_Adresse.designer.cs">
+      <DependentUpon>202011191917562_Adresse.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202011192315488_DateConvention.cs" />
+    <Compile Include="Migrations\202011192315488_DateConvention.designer.cs">
+      <DependentUpon>202011192315488_DateConvention.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -74,6 +84,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202011060934513_initialCreate.resx">
       <DependentUpon>202011060934513_initialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202011191917562_Adresse.resx">
+      <DependentUpon>202011191917562_Adresse.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202011192315488_DateConvention.resx">
+      <DependentUpon>202011192315488_DateConvention.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
