--- a/GP.domaine/Domain.csproj
+++ b/GP.domaine/Domain.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Adresse.cs" />
     <Compile Include="Biological.cs" />
     <Compile Include="Category.cs" />
     <Compile Include="Chemical.cs" />
